fix: Dark Mode Color Contrast

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,7 +26,6 @@
   --ifm-color-primary-light: #9fa9d6;
   --ifm-color-primary-lighter: #abb4db;
   --ifm-color-primary-lightest: #ced4ea;
-  --ifm-background-color: #000000;
 }
 
 .docusaurus-highlight-code-line {
